some css remove ngTagsInput

--- a/public/css/custom/colors.css
+++ b/public/css/custom/colors.css
@@ -15,9 +15,9 @@
 }
 
 .grey-bg {
-    background-color: #666666;
+    background-color: #eeeeee;
 }
 
 .grey-bg:hover {
-    background-color: #333333;
+    background-color: #eeeeee;
 }
