--- a/public/css/includes.css
+++ b/public/css/includes.css
@@ -1,4 +1,4 @@
 @import "custom/colors.css";
-@import "custom/bootstrap-fixes.css";
+@import "custom/bootstrap.css";
 @import "custom/home.css";
 @import "custom/purchase.css";
