--- a/public/css/custom/bootstrap.css
+++ b/public/css/custom/bootstrap.css
@@ -18,7 +18,7 @@
     margin-bottom: -1000px;
     height: 100%;
 }
-
+/*
 .form-control {
     background-color: #e4e4e4;
     border: 1px solid #e4e4e4;
@@ -54,7 +54,7 @@
     border-color: transparent;
     background-color: #337ab7;
     box-shadow: none;
-}
+}*/
 
 .modal-header {
     padding: 10px 30px 0 30px;
@@ -64,4 +64,9 @@
 .navbar-toggle {
     float: none;
     border: none;
+}
+
+.navbar-grey {
+    background-color: #424242;
+    color: rgba(255,255,255,.85);
 }
